--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -15,10 +15,10 @@
     "ui": "workspace:*"
   },
   "devDependencies": {
-    "config": "workspace:*",
+    "conf_eslint": "workspace:*",
     "eslint": "7.32.0",
     "next-transpile-modules": "9.0.0",
-    "tsconfig": "workspace:*",
+    "conf_typescript": "workspace:*",
     "@types/node": "^17.0.12",
     "@types/react": "17.0.37",
     "typescript": "^4.5.3"
