--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 55555",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,13 +12,17 @@
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "conf_tailwind": "workspace:*",
     "ui": "workspace:*"
   },
   "devDependencies": {
-    "config": "workspace:*",
+    "conf_eslint": "workspace:*",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^3.0.0",
     "eslint": "7.32.0",
     "next-transpile-modules": "9.0.0",
-    "tsconfig": "workspace:*",
+    "conf_typescript": "workspace:*",
     "@types/node": "^17.0.12",
     "@types/react": "17.0.37",
     "typescript": "^4.5.3"
