--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "turborepo-basic-shared",
+  "name": "turborepo",
   "version": "0.0.0",
   "private": true,
   "workspaces": [
@@ -10,11 +10,15 @@
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "prepare": "husky install",
+    "clean": "rm -rf .turbo && rm -rf node_modules"
   },
   "devDependencies": {
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.5",
     "prettier": "^2.5.1",
-    "turbo": "latest"
+    "turbo": "^1.1.6"
   },
   "engines": {
     "npm": ">=7.0.0",
