--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,8 +7,9 @@
   "devDependencies": {
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
-    "tsconfig": "workspace:*",
-    "config": "workspace:*",
+    "conf_typescript": "workspace:*",
+    "conf_eslint": "workspace:*",
+    "conf_tailwind": "workspace:*",
     "typescript": "^4.5.3"
   }
 }
