--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,12 +4,14 @@
   "main": "./index.tsx",
   "types": "./index.tsx",
   "license": "MIT",
+  "dependencies": {
+    "conf_tailwind": "workspace:*"
+  },
   "devDependencies": {
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "conf_typescript": "workspace:*",
     "conf_eslint": "workspace:*",
-    "conf_tailwind": "workspace:*",
     "typescript": "^4.5.3"
   }
 }
