--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig/react-library.json",
+  "extends": "conf_typescript/react-library.json",
   "include": ["."],
   "exclude": ["dist", "build", "node_modules"]
 }
